// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer 1`] = `
<div
  className="StartovniCislaProTyp__grid"
>
  <a
    aria-current={null}
    className="StartovniCislaProTyp__item Legenda__item--dokonceno"
    href="/prihlasky/10"
    onClick={[Function]}
  >
    7
  </a>
</div>
`;

exports[`renders StartovniCisla - odstartováni 1`] = `
<div
  className="StartovniCisla__div"
>
  <div
    className="StartovniCisla__buttons Bootstrap-buttons--active"
  >
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="StartovniCisla__button"
      disabled={false}
      onClick={[MockFunction]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="list-alt"
      />
       Přihlášeni
    </Button>
    <Button
      active={true}
      block={false}
      bsClass="btn"
      bsStyle="success"
      className="StartovniCisla__button"
      disabled={false}
      onClick={[MockFunction]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="road"
      />
       Odstartováni
    </Button>
  </div>
  <div
    className="StartovniCisla__legenda"
  >
    <Legenda
      legenda={
        Array [
          Object {
            "name": "dokonceno",
            "popisek": "dokončeno",
            "value": true,
          },
          Object {
            "name": "nedokonceno",
            "popisek": "nedokončeno",
            "value": false,
          },
          Object {
            "name": "na-trase",
            "popisek": "na trase",
            "value": null,
          },
        ]
      }
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="maraton"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        showTyp={true}
        sizePercentage={100}
        typ="maraton"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      Renderer={[Function]}
      jenStartujici={true}
      odstartovani={true}
      typ="maraton"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="půlmaraton"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        showTyp={true}
        sizePercentage={100}
        typ="půlmaraton"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      Renderer={[Function]}
      jenStartujici={true}
      odstartovani={true}
      typ="půlmaraton"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="cyklo"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        showTyp={true}
        sizePercentage={100}
        typ="cyklo"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      Renderer={[Function]}
      jenStartujici={true}
      odstartovani={true}
      typ="cyklo"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="koloběžka"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        showTyp={true}
        sizePercentage={100}
        typ="koloběžka"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      Renderer={[Function]}
      jenStartujici={true}
      odstartovani={true}
      typ="koloběžka"
    />
  </div>
</div>
`;

exports[`renders StartovniCisla - přihlášeni 1`] = `
<div
  className="StartovniCisla__div"
>
  <div
    className="StartovniCisla__buttons Bootstrap-buttons--active"
  >
    <Button
      active={true}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="StartovniCisla__button"
      disabled={false}
      onClick={[MockFunction]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="list-alt"
      />
       Přihlášeni
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="success"
      className="StartovniCisla__button"
      disabled={false}
      onClick={[MockFunction]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="road"
      />
       Odstartováni
    </Button>
  </div>
  <div
    className="StartovniCisla__legenda"
  >
    <Legenda
      legenda={
        Array [
          Object {
            "name": "dokonceno",
            "popisek": "dokončeno",
            "value": true,
          },
          Object {
            "name": "nedokonceno",
            "popisek": "nedokončeno",
            "value": false,
          },
          Object {
            "name": "na-trase",
            "popisek": "na trase",
            "value": null,
          },
          Object {
            "name": "neaktivni",
            "popisek": "neaktivní",
          },
        ]
      }
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="maraton"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        showTyp={true}
        sizePercentage={100}
        typ="maraton"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      Renderer={[Function]}
      jenStartujici={false}
      odstartovani={false}
      typ="maraton"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="půlmaraton"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        showTyp={true}
        sizePercentage={100}
        typ="půlmaraton"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      Renderer={[Function]}
      jenStartujici={false}
      odstartovani={false}
      typ="půlmaraton"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="cyklo"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        showTyp={true}
        sizePercentage={100}
        typ="cyklo"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      Renderer={[Function]}
      jenStartujici={false}
      odstartovani={false}
      typ="cyklo"
    />
  </div>
  <div
    className="StartovniCisla__typ"
    key="koloběžka"
  >
    <div
      className="StartovniCisla__popisek"
    >
      <PopisekKategorie
        showTyp={true}
        sizePercentage={100}
        typ="koloběžka"
      />
    </div>
    <Connect(StartovniCislaProTyp)
      Renderer={[Function]}
      jenStartujici={false}
      odstartovani={false}
      typ="koloběžka"
    />
  </div>
</div>
`;
